# lexicmp

./: .gitignore  Cargo.toml  README.md
src/: iter.rs  lib.rs
